# Goku-ir

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  README.md  WORKFLOW.md  deploy.sh  ir_engine_design.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
.cache/clangd/index/: app_ac.c.487D25E4A874A487.idx  app_ac.h.ACF1EC6C346427DB.idx  app_button.c.51D3BEF6E88E0C34.idx  app_button.h.117101B37864A479.idx  app_data.c.0A10DA15E8969376.idx  app_data.h.B2EF0C241C25E134.idx  app_ir.c.ADA8E3BEEA368955.idx  app_ir.h.3F34E7BA769F7B8C.idx  app_led.c.6C0591121DADEF12.idx  app_led.h.4467B871687B0D86.idx  cbor.h.8F36B7F31526746D.idx  (+248 more)
components/goku_ac/: CMakeLists.txt
components/goku_core/: CMakeLists.txt
components/goku_ir/: CMakeLists.txt
components/goku_ir/include/: goku_ir_app.h  ir_types.h
components/goku_ir/src/: goku_ir_app.c  ir_rmt.cpp
components/goku_ir/src/protocols/: ir_nec.cpp  ir_protocol_daikin.cpp  ir_protocol_mitsubishi.cpp  ir_protocol_samsung.cpp
components/goku_ota/: CMakeLists.txt
components/goku_peripherals/: CMakeLists.txt
components/goku_rainmaker/: CMakeLists.txt
components/goku_web/: CMakeLists.txt
components/goku_wifi/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_button.c  app_button.h  app_data.c  app_data.h  app_ir.c  app_ir.h  app_led.c  app_led.h  app_log.c  app_log.h  app_mdns.c  app_mdns.h  app_mem.c  app_mem.h  app_ota.c  app_ota.h  app_rainmaker.c  app_rainmaker.h  app_web.c  app_web.h  app_wifi.c  app_wifi.h  idf_component.yml  main.c
(+20 files in other folders)
